# PracticaPuertoCOM

./: .gitignore  AUTORES.txt  CMakeLists.txt  CONSTANTES.cpp  CONSTANTES.h  CargadorManejadorPuertoCOM.cpp  CargadorManejadorPuertoCOM.h  Eprotoc.txt  EscritorPuertoCOM.cpp  EscritorPuertoCOM.h  EscritorPuertoCOM_P_ME.cpp  EscritorPuertoCOM_P_ME.h  Fenvio.txt  LectorPuertoCOM.cpp  LectorPuertoCOM.h  ManejadorEntradaUsuario.cpp  ManejadorEntradaUsuario.h  ManejadorInfoUsuario.cpp  ManejadorInfoUsuario.h  ManejadorProtocolo.cpp  ManejadorProtocolo.h  ManejadorPuertoCOM.cpp  ManejadorPuertoCOM.h  ManejadorSalida.cpp  ManejadorSalida.h  NumeroCiclico.cpp  NumeroCiclico.h  PracticaPuertoCOM.vpp  Principal.cpp  Principal.h  Protocolo.cpp  Protocolo.h  ProtocoloEstandar.cpp  ProtocoloEstandar.h  PuertoSerie.cpp  PuertoSerie.h  Sesion1.cpp  Trama.cpp  Trama.h  TramaDatos.cpp  (+1 more)
